<resources>
    <string name="app_name">CovidApp</string>

    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="symptoms">Symptoms</string>

    <string name="test_for_covid">COVID TEST</string>
    <string name="enter_your_name">Enter your name</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="next">Next</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>

    <string name="scratchy">Scratchy Throat</string>
    <string name="runny_nose">Runny nose</string>
    <string name="fever">Fever</string>
    <string name="ache">Body and head ache</string>
    <string name="smell">Lost of smell or taste</string>
    <string name="cough">Cough</string>
    <string name="tired">Tiredness</string>

</resources>